Revicion documento ministerio y operadora3

--- a/src/app/m-trabajo-pozo/componentes/documento-operadora/documento-operadora.component.css
+++ b/src/app/m-trabajo-pozo/componentes/documento-operadora/documento-operadora.component.css
@@ -44,15 +44,8 @@
     margin-right: 1px;
   }
   
-  td {
-    font-size: 12px;
-  }
-  th {
-    font-size: 12px;
-  }
+ 
+  ul.u {list-style-type: none;}
+
   
-  li {
-    margin-left: 3px;
-    margin-right: 3px;
-  }
   
