--- a/src/app/m-trabajo-pozo/componentes/documento-ministerio/documento-ministerio.component.css
+++ b/src/app/m-trabajo-pozo/componentes/documento-ministerio/documento-ministerio.component.css
@@ -9,7 +9,6 @@
   input {
     height: 24px;
     width: 100%;
-    margin-top: 4px;
     font-size: 12px;
   }
   
@@ -44,17 +43,7 @@
     margin-right: 1px;
   }
   
-  td {
-    font-size: 12px;
-  }
-  th {
-    font-size: 12px;
-  }
-  
-  li {
-    margin-left: 3px;
-    margin-right: 3px;
-  }
+  ul.u {list-style-type: none;}
   
 
   
