Cambios en las pantallas, subida y descargarga de archivos, pantalla de conclusiones y verificaciones ultimas pantallas

--- a/src/app/m-trabajo-bitacora/componentes/buscar-portafolio-bitacora/buscar-portafolio-bitacora.component.html
+++ b/src/app/m-trabajo-bitacora/componentes/buscar-portafolio-bitacora/buscar-portafolio-bitacora.component.html
@@ -112,6 +112,11 @@
         <li>
           <i class="fa fa-bar-chart" aria-hidden="true"> Crear Informe de Verificación de Producción </i>
         </li>
+        <li>
+            <i class=" fa fa-comments" aria-hidden="true"> Conlcusiones y Recomendaciones </i>
+          </li>
+
+       
       </ul>
     </div>
   </div>
@@ -164,6 +169,12 @@
                     <li (click)="verificarProduccion(portafolio);">
                       <i class="fa fa-bar-chart fa-2x"></i>
                     </li>
+
+                    <li (click)="conclusion(portafolio);">
+                      <i class="fa fa-comments fa-2x"></i>
+                    </li>
+
+               
 
                   </ul>
                 </div>
