--- a/src/app/m-trabajo-bitacora/componentes/verificacion-novedad/verificacion-novedad.component.html
+++ b/src/app/m-trabajo-bitacora/componentes/verificacion-novedad/verificacion-novedad.component.html
@@ -5,7 +5,7 @@
       <div class="col-md-4">
         <div class="row">
           <div class="col-md-4">
-            <p><b>Numero de Novedad:</b></p>
+            <p><b>Numero de Portafolio:</b></p>
           </div>
           <div class="col-md-8">
             <p>{{portafolio.codigoPortafolio}}</p>
@@ -108,19 +108,6 @@
     </div>
   </div>
 
-  <div class="row">
-      <div class="col-md-6">
-          <div class="row">
-            <div class="col-md-4">
-                <label for="campo"><b> Numero Novedad: </b></label>
-            </div>
-            <div class="col-md">
-                <p class="mtop">{{portafolio.codigoPortafolio}}_{{verificacioNovedad.codVerfTrabajoInc}} </p>
-            </div>
-          </div>
-        </div>    
-    </div>
-
 
  
 
@@ -140,14 +127,14 @@
     
 
     <div class="col-md-6">
-      <div class="row">
-        <div class="col-md-4">
-          <label for="verificarFechas"><b>Estado:*</b></label>
-        </div>
-        <div class="col-md">
-        <p-dropdown [options]="estadolist" [(ngModel)]="verificacioNovedad.estado" readonly></p-dropdown>
-        </div>
-      </div>
+        <div class="row">       
+            <div class="col-md-4">
+              <label for="verificacionNovedad"><b>Valoración:*</b></label>
+            </div>
+            <div class="col-md">
+            <p-dropdown [options]="valoracionList" [(ngModel)]="verificacioNovedad.valoracion" readonly></p-dropdown>
+            </div>
+          </div>
     </div>
   
 
@@ -162,15 +149,15 @@
     </div>
   </div>
 
-  <div class="col-md-6">
-    <div class="row">       
-      <div class="col-md-4">
-        <label for="verificacionNovedad"><b>Valoración:*</b></label>
-      </div>
-      <div class="col-md">
-      <p-dropdown [options]="valoracionList" [(ngModel)]="verificacioNovedad.valoracion" readonly></p-dropdown>
-      </div>
-    </div>
+  <div class="col-md-6" *ngIf="usuario.perfil.codigoPerfil == '21'">
+      <div class="row">       
+          <div class="col-md-4">
+            <label for="verificacionNovedad"><b>Estado:*</b></label>
+          </div>
+          <div class="col-md">
+          <p-dropdown [options]="estadolist" [(ngModel)]="verificacioNovedad.estado" readonly></p-dropdown>
+          </div>
+        </div>  
   </div>
 </div>
 
@@ -198,7 +185,7 @@
         <label for="campo"><b>Fecha de Actualización:</b></label>
       </div>
       <div class="col-md">
-        <p class="mtop">{{verificacioNovedad.fecha_actualizacion | date:'MM-dd-yyyy'}}</p>
+        <p class="mtop">{{verificacioNovedad.fecha_actualizacion | date:'dd-MM-yyyy'}}</p>
       </div>
     </div>
   </div>
@@ -209,7 +196,7 @@
         <label for="campo"><b> Usuario: </b></label>
       </div>
       <div class="col-md">
-        <p>{{portafolio.funcionario.nombres}} {{portafolio.funcionario.apellidos}}</p>
+        <p>{{usuario.nombres}} {{usuario.apellidos}}</p>
       </div>
     </div>
   </div>
@@ -230,36 +217,62 @@
 </p-fieldset>
 
 <br>
+
 <p-fieldset legend="Resultados" [toggleable]="true">
 
+    <div class="row">
+        <div class="col-md-12">
+          <ul class="nav justify-content-end">
+            <li>
+                <i class="fa fa-times">Anular Novedad</i>
+            </li>
+            <li>
+                &nbsp; &nbsp;
+            </li>
+            <li>
+            <i class="fa fa-thumb-tack ">Seguimiento Novedad</i>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+    
   <div class="row">
     <div class="col-md-12">
       <table class="table table-bordered table-sm">
         <thead>
           <tr>
 
-            <th>Nro. Novedad</th>
+            <th>Cod. Novedad</th>
             <th>Novedad</th>
             <th>Justificado</th>
             <th>Estado</th>
             <th>Fecha Actualización</th>
             <th>Observacion</th>
-            <th>Seguimiento</th>
+            <th>Acciones</th>
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let verificacionNovedad of novedadList | paginate: { id: 'paginator',itemsPerPage: page_size, currentPage: page_number , totalItems: total}; let i=index;" style="font-size: 11px">
+          <tr *ngFor="let editarNovedad of novedadList | paginate: { id: 'paginator',itemsPerPage: page_size, currentPage: page_number , totalItems: total}; let i=index;" style="font-size: 11px">
 
-            <td>{{portafolio.codigoPortafolio}}_{{verificacionNovedad.codVerfTrabajo}} </td>
-            <td>{{verificacionNovedad.novedad  | JustificadoBitacora }} </td>
-            <td>{{verificacionNovedad.justificado | JustificadoBitacora}} </td>
-            <td>{{verificacionNovedad.estado | estadoBitacora}}  </td>
-            <td>{{verificacionNovedad.fecha_actualizacion  | date:'dd-MM-yyyy' }} </td>
-            <td>{{verificacionNovedad.observacion }} </td>
-           <td>
-          
-              <i class="fa fa-check"></i>
-    
+            <td>{{portafolio.codigoPortafolio}}_{{i+1}}</td>
+            <td>{{editarNovedad.novedad  | JustificadoBitacora }} </td>
+            <td>{{editarNovedad.justificado | JustificadoBitacora}} </td>
+            <td>{{editarNovedad.estado | estadoBitacora}}  </td>
+            <td>{{editarNovedad.fecha_actualizacion  | date:'dd-MM-yyyy' }} </td>
+            <td>{{editarNovedad.observacion }} </td>
+            <td>
+            <i 
+            (click)="seguimientoNovedad(editarNovedad)">
+            <i class="fa fa-thumb-tack  fa-2x"></i>
+            </i>
+          <i>
+          <i *ngIf="usuario && usuario.perfil && usuario.perfil.codigoPerfil == '21'"
+           (click)="openModalNovedadAnular(NovedadTempalteAnular, editarNovedad)">
+ 
+          <i class="fa fa-times fa-2x"></i>
+          </i>
+          </i>
           </td>
           </tr>
 
@@ -268,9 +281,6 @@
     </div>
     <div class="row">
       <div class="col-md-12 text-center">
-        <pagination-controls id="paginator" (pageChange)="page_number = $event" previousLabel="Anterior"
-          nextLabel="Siguiente" responsive="true">
-          ></pagination-controls>
       </div>
     </div>
   </div>
@@ -282,9 +292,38 @@
       <button type="button" class="btn btn-secondary btn-sm"  (click)="volver(portafolio) "><i class="fa fa-bar-chart" aria-hidden="true">&nbsp;Verificar Producción</i>
       </button>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <button type="button" class="btn btn-secondary btn-sm"  (click)="volver(portafolio) "><i class="fa fa-comments" aria-hidden="true">&nbsp;Conclusiones y Recomendaciones</i>
+      <button type="button" class="btn btn-secondary btn-sm"  (click)="siguiente(portafolio) "><i class="fa fa-comments" aria-hidden="true">&nbsp;Conclusiones y Recomendaciones</i>
       </button>
 </div>
+
+<ng-template #NovedadTempalteAnular>
+  <div class="container mt-3 mb-3">
+    <div class="row text-center">
+      <div class="col-md-12">
+        <h4>Anular Novedad</h4>
+      </div>
+    </div>
+    <hr>
+
+    <div class="row">
+      <div class="col-md-12">
+        <p>¿Desea anular este registro?</p>
+      </div>
+    </div>
+
+    <div class="row mt-3">
+      <div class="col-md-6">
+        <button type="button" class="btn btn-sm btn-primary btn-block" (click)="AnularNovedad()">SI</button>
+      </div>
+      <div class="col-md-6">
+        <button type="button" class="btn btn-sm btn-danger btn-block" (click)="closeModalNovedadAnular()">NO</button>
+      </div>
+    </div>
+  </div>
+
+
+</ng-template>
+
 
 
 <ng-template #customLoadingTemplate> </ng-template>
