--- a/src/app/m-trabajo-bitacora/componentes/editar-informe-operadora/editar-informe-operadora.component.html
+++ b/src/app/m-trabajo-bitacora/componentes/editar-informe-operadora/editar-informe-operadora.component.html
@@ -1,150 +1,305 @@
-<p-fieldset legend="Editar Informe de trabajos de Operadora" [toggleable]="true">
-    <div class="row">
-      <div class="col-md-12">
-  
+
+  <H4> Editar Informe Trabajos de Operadora</H4>
+
+  <div class="row">
+    <div class="col-md-12">
+
+    </div>
+  </div>
+
+<p-fieldset legend="Datos del portafolio" [toggleable]="true">
+  <div class="row mt-1">
+    <div class="col-md-4">
+      <div class="row">
+        <div class="col-md-4">
+          <p><b>Numero de Portafolio:</b></p>
+        </div>
+        <div class="col-md-8">
+          <p>{{portafolio.codigoPortafolio}}</p>
+        </div>
       </div>
     </div>
-  
-  
-    <div class="row">
-      <div class="col-md-4">
-        <label for="campo"><b> Numero Portafolio: </b></label>
+    <div class="col-md-4">
+      <div class="row">
+        <div class="col-md-4">
+          <p><b>Fecha de Registro:</b></p>
+        </div>
+        <div class="col-md-8">
+          <p>{{portafolio.fechaRegistro | date:'dd/MM/yyyy'}}</p>
+        </div>
       </div>
-      <div class="col-md">
-        <p class="mtop">{{informeOperadora.codPortafolio}}</p>
+    </div>
+    <div class="col-md-4">
+      <div class="row">
+        <div class="col-md-4">
+          <p><b>Funcionario:</b></p>
+        </div>
+        <div class="col-md-8">
+          <p>{{portafolio.funcionario.nombres}} {{portafolio.funcionario.apellidos}}</p>
+        </div>
       </div>
-    
+    </div>
+  </div>
+
+  <div class="row mt-1">
+    <div class="col-md-4">
+      <div class="row">
+        <div class="col-md-4">
+          <p><b>Pozo:</b></p>
+        </div>
+        <div class="col-md-8">
+          <p>{{portafolio.pozo.pozNombre}}</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="row">
+        <div class="col-md-4">
+          <p><b>Trabajo:</b></p>
+        </div>
+        <div class="col-md-8">
+          <p>{{portafolio.tipoTrabajo.tipoTrabajo}}</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4" *ngIf="portafolio.fechaTrabajoSinTorre">
+      <div class="row">
+        <div class="col-md-4">
+          <p><b>Fecha TST:</b></p>
+        </div>
+        <div class="col-md-8">
+          <p>{{portafolio.fechaTrabajoSinTorre | date:'dd/MM/yyyy'}}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row mt-1">
+    <div class="col-md-4">
+      <div class="row">
+        <div class="col-md-4">
+          <p><b>Número de Trabajo:</b></p>
+        </div>
+        <div class="col-md-8">
+          <p>{{portafolio.numeroTrabajo}}</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="row">
+        <div class="col-md-4">
+          <p><b>Fecha Inicio Trabajo:</b></p>
+        </div>
+        <div class="col-md-8">
+          <p>{{portafolio.fechaInicio  | date:'dd/MM/yyyy'}}</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="row">
+        <div class="col-md-4">
+          <p><b>Fecha Fin Trabajo:</b></p>
+        </div>
+        <div class="col-md-8">
+          <p>{{portafolio.fechaFin  | date:'dd/MM/yyyy' }}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</p-fieldset>
+<br>
+
+<p-fieldset legend="Formulario" [toggleable]="true">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-4">
+          <label for="InformeOperadora"><b>Numero de Oficio:*</b></label>
+        </div>
+        <div class="col-md">
+          <input type="text" class="form-control" [(ngModel)]="informeOperadora.numeroOficio">
+          <br>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-4">
+          <label for="InformeOperadora"><b>Numero de SGC:*</b></label>
+        </div>
+        <div class="col-md">
+          <input type="text" class="form-control" [(ngModel)]="informeOperadora.numeroSgc">
+          <br>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="row">
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-4">
+          <label for="InformeOperadora"><b>Anexo Informe:*</b></label>
+        </div>
+        <div class="col-md">
+            <div class="custom-file">
+                <input (change)="onChangeAnexo1($event)" type="file" accept=".pdf"  required >       
+            </div>
+                <br>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-6">
+        <div class="row">
+          <div class="col-md-4">
+            <label for="anexoDocumento"><b>Anexo Documento:*</b></label>
+          </div>
+          <div class="col-md">
+              <div class="custom-file">
+                  <input (change)="onChangeAnexo2($event)" type="file" accept=".pdf" required >   
+              </div>    
+                  <br>
+          </div>
+        </div>
+      </div>
+  
+
+
+  </div>
+
+  <div class="row">
+   
+  
+ 
+
+  </div>
+
+  <div class="row">
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-4">
+          <br>
+          <label for="InformeOperadora"><b>Fecha Oficio:*</b></label>
+        </div>
+        <div class="col-md">
+          <br>
+          <p class="mtop">{{informeOperadora.fechaOficio | date:'dd/MM/yyyy' }}</p>
+          <br>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-6">
+        <div class="row">
+          <div class="col-md-4">
+            <br>
+            <label for="InformeOperadora"><b>Fecha de ARCH:*</b></label>
+          </div>
+          <div class="col-md">
+            <br>
+            <p class="mtop">{{informeOperadora.fechaArch | date:'dd/MM/yyyy' }}</p>
+            
+            <br>
+          </div>
+        </div>
       </div>
 
-    <div class="row">
-  
-      <div class="col-md-6">
-        <div class="row">
-          <div class="col-md-4">
-            <label for="InformeOperadora"><b>Numero de Oficio:*</b></label>
-          </div>
-          <div class="col-md">
-            <input type="text" class="form-control" [(ngModel)]="informeOperadora.numeroOficio">
-          </div>
+  </div>
+  <div class="row">
+    <div *ngIf="usuario && usuario.perfil && usuario.perfil.codigoPerfil == '21'"  class="col-md-6">
+      <div class="row">
+        <div class="col-md-4">
+          <br>
+          <label for="InformeOperadora"><b>Estado:*</b></label>
         </div>
-      </div>
-  
-      <div class="col-md-6">
-        <div class="row">
-          <div class="col-md-4">
-            <label for="InformeOperadora"><b>Numero de SGC:*</b></label>
-          </div>
-          <div class="col-md">
-            <input type="text" class="form-control" [(ngModel)]="informeOperadora.numeroSgc">
-          </div>
-        </div>
-      </div>
-  
-    </div>
-  
-    <div class="row">
-      <div class="col-md-6">
-        <div class="row">
-          <div class="col-md-4">
-            <label for="InformeOperadora"><b>Anexo Documento:*</b></label>
-          </div>
-          <div class="col-md">
-            <input type="file" accept=".pdf" [(ngModel)]="informeOperadora.anexoDocumento" required>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="row">
-          <div class="col-md-4">
-            <label for="InformeOperadora"><b>Fecha de Oficio:*</b></label>
-          </div>
-          <div class="col-md">
-            <p-calendar [style]="{ width: '100%' }" [inputStyle]="{ width: '100%' }" [(ngModel)]="informeOperadora.fechaOficio" required></p-calendar>
-          </div>
+        <div class="col-md">
+          <br>
+        <p-dropdown [options]="estadolist" [(ngModel)]="informeOperadora.estado" readonly></p-dropdown>
+        <br>
         </div>
       </div>
     </div>
-  
-    <div class="row">
-      <div class="col-md-6">
-        <div class="row">
-          <div class="col-md-4">
-            <label for="InformeOperadora"><b>Fecha ARCH:*</b></label>
-          </div>
-          <div class="col-md">
-            <p-calendar [style]="{ width: '100%' }" [inputStyle]="{ width: '100%' }" [(ngModel)]="informeOperadora.fechaArch" required></p-calendar>
-          </div>
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-4">
+          <br>
+          <label for="campo"><b>Fecha de Actualización:</b></label>
+        </div>
+        <div class="col-md">
+          <br>
+            <p class="mtop">{{today | date:'dd/MM/yyyy'}}</p>
+            <br>
         </div>
       </div>
-      <div class="col-md-6">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-4">
+          <br>
+          <label for="InformeOperadora"><b>RIG:*</b></label>
+        </div>
+        <div class="col-md">
+        <br>
+          <input type="text" class="form-control" [(ngModel)]="informeOperadora.rig" required>
+          <br>
+        </div>
+      </div>
+    </div>
+
+    
+
+    <div class="col-md-6">
         <div class="row">
           <div class="col-md-4">
+            <br>
             <label for="InformeOperadora"><b>Costo real (USD):*</b></label>
           </div>
           <div class="col-md">
-            <input type="number" class="form-control" [(ngModel)]="informeOperadora.costo_real" required>
+            <br>
+            <input type="number" class="form-control" [(ngModel)]="informeOperadora.costo_real"  required="true">
+            <br>
           </div>
         </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6">
-        <div class="row">
-          <div class="col-md-4">
-            <label for="InformeOperadora"><b>Estado:*</b></label>
-          </div>
-          <div class="col-md">
-          <p-dropdown [options]="estadolist" [(ngModel)]="informeOperadora.estado" readonly></p-dropdown>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="row">
-          <div class="col-md-4">
-            <label for="campo"><b>Fecha de Actualización:</b></label>
-          </div>
-          <div class="col-md">
-              <p class="mtop">{{today | date:'MM-dd-yyyy'}}</p>
-          </div>
-        </div>
-      </div>
-    </div>
   
-    <div class="row">
-      <div class="col-md-6">
-        <div class="row">
-          <div class="col-md-4">
-            <label for="InformeOperadora"><b>RIG:*</b></label>
-          </div>
-          <div class="col-md">
-            <input type="text" class="form-control" [(ngModel)]="informeOperadora.rig" required>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="row">
-          <div class="col-md-4">
-            <label for="InformeOperadora"><b>Anexo Informe:*</b></label>
-          </div>
-          <div class="col-md">
-            <input type="file" accept=".pdf" [(ngModel)]="informeOperadora.anexo_Oficio" required>
-          </div>
-        </div>
-      </div>
+  </div>
+
+  <div class="row" [hidden]="">
+  </div>
+  <hr />
+  <div class="row justify-content-end">
+    <div class="col-md-4">
+        <button type="button" class="btn btn-sm btn-info btn-block" 
+       (click)="guardarInformeTrabajo()">
+          Actualizar
+        </button>
     </div>
-  
-    <div class="row">
-    </div>
-    <hr />
-    <div class="row justify-content-end">
-      <div class="col-md-4">
-        <button type="button" class="button" (click)="guardarInformeTrabajo()">
-          Guardar
+
+  </div>
+</p-fieldset>
+
+
+<div class="row">
+    <div class="col-md-12 row justify-content-center">
+        <button type="button" class="btn btn-secondary btn-sm"  (click)="volver()">Volver
         </button>
       </div>
-    </div>
-  </p-fieldset>
+</div>
+
+
+<ng-template #customLoadingTemplate> </ng-template>
+<ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }" [template]="customLoadingTemplate">
+</ngx-loading>
+
+
   
-  <ng-template #customLoadingTemplate> </ng-template>
- 
   
+  
+
+  <ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }" [template]="customLoadingTemplate">
+  </ngx-loading>
