--- a/src/app/m-menu/menu/menu.component.html
+++ b/src/app/m-menu/menu/menu.component.html
@@ -24,11 +24,11 @@
   <p class="separator-tittle"></p>
   <div class="row sidebar-tittle">
     <div class="col-md-6">
-      <img src="../../../assets/img/video.png" style="width: 40%; align-content: center" alt="" />
+      <img src="assets/img/video.png" style="width: 30%; align-content: center" alt="" />
       <p>Video Tutorial</p>
     </div>
     <div class="col-md-6">
-      <img src="../../../assets/img/pdf.png" style="width: 40%;align-content: center" alt="" />
+      <img src="assets/img/pdf.png" style="width: 30%;align-content: center" alt="" />
       <p>Manual de usuario PDF</p>
     </div>
   </div>
@@ -38,7 +38,7 @@
   <div class="container-fluid" style="margin-top: 1%;">
     <div class="row">
       <div class="col-md-6">
-        <img src="../../../assets/img/logo-siscohi.PNG" style="width: 50%;" />
+        <img src="assets/img/logo-siscohi.PNG" style="width: 50%;" />
       </div>
       <div class="col-md-6">
         <div class="row">
