--- a/src/app/m-trabajo-pozo/componentes/registro-trabajo-diario/registro-trabajo-diario.component.html
+++ b/src/app/m-trabajo-pozo/componentes/registro-trabajo-diario/registro-trabajo-diario.component.html
@@ -1,6 +1,18 @@
 <p-fieldset legend="REGISTRO REPORTE DIARIO TRABAJOS EN POZO">
   <p-fieldset legend="DATOS DEL PORTAFOLIO" [toggleable]="true">
 
+    <div class="row ">
+      <div class="col-md-12">
+        <div class="row mt-2 justify-content-end">
+          
+          <div class="col-md-6 mt-1 mb-3">
+            <button type="button" class="btn btn-sm btn-danger btn-block" (click)="goToBuscarPortafolio()">
+              <i class="fa fa-sign-out"> Cancelar</i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div class="row">
       <div class="col-md-12">
